chore(ci): Work to have NXRM use PostgreSQL for Acc Tests
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/test-trusted.yml
+++ b/.github/workflows/test-trusted.yml
@@ -134,7 +134,7 @@ jobs:
                 mkdir -p etc/fabric
                 echo "username=nexus" > etc/fabric/nexus-store.properties
                 echo "password=somepassword" >> etc/fabric/nexus-store.properties
-                echo "jdbcUrl="jdbc:postgresql://localhost/nexus" >> etc/fabric/nexus-store.properties
+                echo "jdbcUrl=jdbc:postgresql://localhost/nexus" >> etc/fabric/nexus-store.properties
               working-directory: "${{ github.workspace }}/sonatype-work/nexus3"
 
             - name: Start Sonatype Nexus Repository Manager
