chore(ci): Work to achieve Acceptance Testing additionally against NXRM HA
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/test-trusted-ha-cluster.yml
+++ b/.github/workflows/test-trusted-ha-cluster.yml
@@ -92,6 +92,9 @@ jobs:
                 mkdir -p ${{ github.workspace }}/node-01/sonatype-work/nexus3/etc/fabric
                 mkdir -p ${{ github.workspace }}/node-02/sonatype-work/nexus3/etc/fabric
                 mkdir -p ${{ github.workspace }}/node-03/sonatype-work/nexus3/etc/fabric
+                echo "nexus.datastore.clustered.enabled = true" > ${{ github.workspace }}/node-01/sonatype-work/nexus3/etc/nexus.properties
+                echo "nexus.datastore.clustered.enabled = true" > ${{ github.workspace }}/node-02/sonatype-work/nexus3/etc/nexus.properties
+                echo "nexus.datastore.clustered.enabled = true" > ${{ github.workspace }}/node-03/sonatype-work/nexus3/etc/nexus.properties
                 echo "application-port=8082" > ${{ github.workspace }}/node-02/sonatype-work/nexus3/etc/nexus-default.properties
                 echo "application-port=8083" > ${{ github.workspace }}/node-03/sonatype-work/nexus3/etc/nexus-default.properties
                 cp ${{ github.workspace }}/nexus-store.properties ${{ github.workspace }}/node-01/sonatype-work/nexus3/etc/fabric/nexus-store.properties
