--- a/.github/workflows/test-trusted-ha-cluster.yml
+++ b/.github/workflows/test-trusted-ha-cluster.yml
@@ -109,7 +109,7 @@ jobs:
               run: |
                   set +e
                   sleep 20
-                  while true; do
+                  for i in {1..5}; do
                     STATUS=$(curl -s -o /dev/null -w "%{http_code}" "http://localhost:8081/service/rest/v1/status")
                     CURL_EXIT=$?
 
@@ -124,7 +124,7 @@ jobs:
                           sleep 5
                       fi
                     else
-                      echo "⚠️ curl returned unexpected exit code $CURL_EXIT. Retrying..."
+                      echo "⚠️ curl returned unexpected exit code $CURL_EXIT. Retrying... (attempt $i/5)"
                       sleep 5
                     fi
                   done
@@ -137,7 +137,7 @@ jobs:
               run: |
                   set +e
                   sleep 20
-                  while true; do
+                  for i in {1..5}; do
                     STATUS=$(curl -s -o /dev/null -w "%{http_code}" "http://localhost:8082/service/rest/v1/status")
                     CURL_EXIT=$?
 
@@ -152,7 +152,7 @@ jobs:
                           sleep 5
                       fi
                     else
-                      echo "⚠️ curl returned unexpected exit code $CURL_EXIT. Retrying..."
+                      echo "⚠️ curl returned unexpected exit code $CURL_EXIT. Retrying... (attempt $i/5)"
                       sleep 5
                     fi
                   done
@@ -165,7 +165,7 @@ jobs:
               run: |
                   set +e
                   sleep 20
-                  while true; do
+                  for i in {1..5}; do
                     STATUS=$(curl -s -o /dev/null -w "%{http_code}" "http://localhost:8083/service/rest/v1/status")
                     CURL_EXIT=$?
 
@@ -180,7 +180,7 @@ jobs:
                           sleep 5
                       fi
                     else
-                      echo "⚠️ curl returned unexpected exit code $CURL_EXIT. Retrying..."
+                      echo "⚠️ curl returned unexpected exit code $CURL_EXIT. Retrying... (attempt $i/5)"
                       sleep 5
                     fi
                   done
